<resources>
    <string name="app_name">Ticket Checking</string>
    <string name="ticket_search">Search for Ticket</string>
    <string name="hint">Ticket Number</string>
    <string name="search">Search</string>
    <string name="scan">Scan</string>
    <string name="back">Back</string>
    <string name="no_internet">No internet</string>
    <string name="enter_ticket">Enter Ticket Number</string>
    <string name="nothing">Nothing to check</string>
    <string name="denied">Permission Denied</string>
    <string name="valid">Ticket is Valid</string>
    <string name="invalid">Ticket is Invalid</string>
    <string name="wrong">Wrong in ticket Number</string>
    <string name="done">Done</string>
</resources>
