<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/image"
            android:src="@drawable/index"/>

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:layout_below="@id/image"
            android:text="@string/ticket_search"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@id/text"
            android:layout_margin="10dp"
            android:background="@android:color/black" />

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view"

            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:background="@drawable/rectangle"
            android:hint="@string/hint"
            android:inputType="number"
            android:padding="12dp" />

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/search"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/scan_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/search"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/scan"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:id="@+id/result"
            android:layout_margin="10dp"
            android:foreground="?attr/selectableItemBackground"
            android:visibility="invisible"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content" />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/progress"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:id="@+id/internet"
            android:visibility="invisible"/>
        <Button
            android:layout_width="match_parent"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:id="@+id/back"
            android:layout_below="@id/search"
            android:text="@string/back"
            android:layout_margin="10dp"
            android:foreground="?attr/selectableItemBackground"
            android:visibility="invisible"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/copy_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/scan_button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="www.3eesh.com.sa"
            android:textColor="@android:color/black"
            android:textSize="19sp"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>